replace clock by perf_counter

--- a/_doc/notebooks/nlp/completion_trie_long.ipynb
+++ b/_doc/notebooks/nlp/completion_trie_long.ipynb
@@ -337,7 +337,7 @@
         "    print(\"time\", 0)\n",
         "    allres = []\n",
         "    for size in sizes:\n",
-        "        begin = time.clock()\n",
+        "        begin = time.perf_counter()\n",
         "        if size is None:\n",
         "            size = len(list_titles)\n",
         "            spl = list_titles\n",
@@ -345,7 +345,7 @@
         "            spl = random.sample(list_titles, size)\n",
         "        spl.sort()\n",
         "        res = gain_dynamique_moyen_par_mot(spl, [1.0] * len(spl))\n",
-        "        dt = time.clock() - begin\n",
+        "        dt = time.perf_counter() - begin\n",
         "        print(\"time: {0}s - nb={1}\".format(dt, len(spl)), \"gain\", tuple(_/res[-1] for _ in res))\n",
         "        allres.append((size, dt) + res)\n",
         "        # with open(\"sample%d.txt\" % len(spl), \"w\", encoding=\"utf-8\") as f:\n",
@@ -567,11 +567,11 @@
         "    print(\"time\", 0)\n",
         "    allres = []\n",
         "    for size in alphabet_sizes:\n",
-        "        begin = time.clock()\n",
+        "        begin = time.perf_counter()\n",
         "        spl = reduce_alphabet(sample, size)\n",
         "        spl = list(sorted(set(spl)))\n",
         "        res = gain_dynamique_moyen_par_mot(spl, [1.0] * len(spl))\n",
-        "        dt = time.clock() - begin\n",
+        "        dt = time.perf_counter() - begin\n",
         "        print(\"time: {0}s - nb={1}\".format(dt, len(spl)), \"gain\", tuple(_/res[-1] for _ in res))\n",
         "        if size is None:\n",
         "            size = max(_ for _ in alphabet_sizes if _ is not None) + 5\n",
