update for piecewise logistic regression

--- a/_doc/notebooks/dsgarden/regression_lineaire.ipynb
+++ b/_doc/notebooks/dsgarden/regression_lineaire.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# R\u00e9gression lin\u00e9aire et r\u00e9sultats num\u00e9riques\n",
+        "# R\u00e9gression lin\u00e9aire\n",
         "\n",
         "Ce notebook s'int\u00e9resse \u00e0 la fa\u00e7on d'interpr\u00e9ter les r\u00e9sultats d'une r\u00e9gression lin\u00e9aire lorsque les variables sont corr\u00e9l\u00e9es puis il explore une fa\u00e7on d'associer arbre de d\u00e9cision et r\u00e9gression lin\u00e9aire pour construire une r\u00e9gression lin\u00e9aire par morceaux."
       ]
