neural tree net and cost

--- a/_doc/notebooks/ml/neural_tree_onnx.ipynb
+++ b/_doc/notebooks/ml/neural_tree_onnx.ipynb
@@ -5,7 +5,7 @@
       "id": "4b855db5",
       "metadata": {},
       "source": [
-        "# NeuralTreeNet and ONNX\n",
+        "# NeuralTreeNet et ONNX\n",
         "\n",
         "La conversion d'un arbre de d\u00e9cision au format ONNX peut cr\u00e9er des diff\u00e9rences entre le mod\u00e8le original et le mod\u00e8le converti (voir [Issues when switching to float](http://www.xavierdupre.fr/app/onnxcustom/helpsphinx/gyexamples/plot_ebegin_float_double.html). Le probl\u00e8me vient d'un changement de type, les seuils de d\u00e9cisions sont arrondis au float32 le plus proche de leur valeur en float64 (double). Qu'advient-il si l'arbre de d\u00e9cision est converti en r\u00e9seau de neurones d'abord.\n",
         "\n",
