--- a/_doc/notebooks/dsgarden/correlation_non_lineaire.ipynb
+++ b/_doc/notebooks/dsgarden/correlation_non_lineaire.ipynb
@@ -149,6 +149,7 @@
    ],
    "source": [
     "from jyquickhelper import add_notebook_menu\n",
+    "\n",
     "add_notebook_menu()"
    ]
   },
@@ -261,6 +262,7 @@
     "X = iris.data\n",
     "Y = iris.target\n",
     "import pandas\n",
+    "\n",
     "df = pandas.DataFrame(X)\n",
     "df.columns = [\"X1\", \"X2\", \"X3\", \"X4\"]\n",
     "df.head()"
@@ -284,6 +286,7 @@
    ],
    "source": [
     "import seaborn as sns\n",
+    "\n",
     "sns.set()\n",
     "sns.pairplot(df);"
    ]
@@ -493,21 +496,24 @@
     "from sklearn.preprocessing import scale\n",
     "import numpy\n",
     "\n",
+    "\n",
     "def correlation_etendue(df, model, **params):\n",
     "    cor = df.corr()\n",
-    "    df = scale(df)    \n",
+    "    df = scale(df)\n",
     "    for i in range(cor.shape[0]):\n",
-    "        xi = df[:, i:i+1]\n",
+    "        xi = df[:, i : i + 1]\n",
     "        for j in range(cor.shape[1]):\n",
     "            mod = model(**params)\n",
     "            xj = df[:, j]\n",
     "            mod.fit(xi, xj)\n",
     "            v = mod.predict(xi)\n",
     "            c = numpy.std(v)\n",
-    "            cor.iloc[i,j] = c\n",
+    "            cor.iloc[i, j] = c\n",
     "    return cor\n",
     "\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "cor = correlation_etendue(df, LinearRegression, fit_intercept=False)\n",
     "cor"
    ]
@@ -688,6 +694,7 @@
    ],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
     "cor = correlation_etendue(df, DecisionTreeRegressor)\n",
     "cor"
    ]
@@ -772,6 +779,7 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
     "cor = correlation_etendue(df, RandomForestRegressor, n_estimators=10)\n",
     "cor"
    ]
@@ -876,23 +884,27 @@
     "from sklearn.model_selection import train_test_split\n",
     "import numpy\n",
     "\n",
+    "\n",
     "def correlation_cross_val(df, model, draws=5, **params):\n",
     "    cor = df.corr()\n",
-    "    df = scale(df)    \n",
+    "    df = scale(df)\n",
     "    for i in range(cor.shape[0]):\n",
-    "        xi = df[:, i:i+1]\n",
+    "        xi = df[:, i : i + 1]\n",
     "        for j in range(cor.shape[1]):\n",
     "            xj = df[:, j]\n",
     "            mem = []\n",
     "            for k in range(0, draws):\n",
-    "                xi_train, xi_test, xj_train, xj_test = train_test_split(xi, xj, test_size=0.5)\n",
-    "                mod = model(**params)            \n",
+    "                xi_train, xi_test, xj_train, xj_test = train_test_split(\n",
+    "                    xi, xj, test_size=0.5\n",
+    "                )\n",
+    "                mod = model(**params)\n",
     "                mod.fit(xi_train, xj_train)\n",
     "                v = mod.predict(xi_test)\n",
-    "                c = (1 - numpy.var(v - xj_test))\n",
-    "                mem.append(max(c, 0) **0.5)\n",
-    "            cor.iloc[i,j] = sum(mem) / len(mem)\n",
+    "                c = 1 - numpy.var(v - xj_test)\n",
+    "                mem.append(max(c, 0) ** 0.5)\n",
+    "            cor.iloc[i, j] = sum(mem) / len(mem)\n",
     "    return cor\n",
+    "\n",
     "\n",
     "cor = correlation_cross_val(df, LinearRegression, fit_intercept=False, draws=20)\n",
     "cor"
@@ -1092,40 +1104,47 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def pairplot_cross_val(data, model=None, ax=None, **params):\n",
     "    if ax is None:\n",
-    "        fig, ax = plt.subplots(data.shape[1], data.shape[1], figsize=params.get('figsize', (10,10)))\n",
-    "    if 'figsize' in params:\n",
+    "        fig, ax = plt.subplots(\n",
+    "            data.shape[1], data.shape[1], figsize=params.get(\"figsize\", (10, 10))\n",
+    "        )\n",
+    "    if \"figsize\" in params:\n",
     "        del params[\"figsize\"]\n",
     "    if model is None:\n",
     "        from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "        model = LinearRegression\n",
-    "    \n",
+    "\n",
     "    df = scale(data)\n",
     "    cor = numpy.corrcoef(df.T)\n",
     "    for i in range(cor.shape[0]):\n",
-    "        xi = df[:, i:i+1]\n",
+    "        xi = df[:, i : i + 1]\n",
     "        for j in range(cor.shape[1]):\n",
     "            xj = df[:, j]\n",
     "            mem = []\n",
-    "            xi_train, xi_test, xj_train, xj_test = train_test_split(xi, xj, test_size=0.5)\n",
-    "            mod = model(**params)            \n",
+    "            xi_train, xi_test, xj_train, xj_test = train_test_split(\n",
+    "                xi, xj, test_size=0.5\n",
+    "            )\n",
+    "            mod = model(**params)\n",
     "            mod.fit(xi_train, xj_train)\n",
     "            v = mod.predict(xi_test)\n",
-    "            mod = model(**params)            \n",
+    "            mod = model(**params)\n",
     "            mod.fit(xi_test, xj_test)\n",
     "            v2 = mod.predict(xi_train)\n",
-    "            ax[i,j].plot(xj_test, v, \".\")\n",
-    "            ax[i,j].plot(xj_train, v2, \".\")\n",
+    "            ax[i, j].plot(xj_test, v, \".\")\n",
+    "            ax[i, j].plot(xj_train, v2, \".\")\n",
     "            if j == 0:\n",
-    "                ax[i,j].set_ylabel(data.columns[i])\n",
-    "            if i == data.shape[1]-1:\n",
-    "                ax[i,j].set_xlabel(data.columns[j])\n",
+    "                ax[i, j].set_ylabel(data.columns[i])\n",
+    "            if i == data.shape[1] - 1:\n",
+    "                ax[i, j].set_xlabel(data.columns[j])\n",
     "            mi = min(min(xj_test), min(v), min(xj_train), min(v2))\n",
     "            ma = max(max(xj_test), max(v), max(xj_train), max(v2))\n",
-    "            ax[i,j].plot([mi, ma], [mi, ma], \"--\")\n",
+    "            ax[i, j].plot([mi, ma], [mi, ma], \"--\")\n",
     "    return ax\n",
-    "            \n",
+    "\n",
+    "\n",
     "ax = pairplot_cross_val(df)\n",
     "ax;"
    ]
@@ -1190,6 +1209,7 @@
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
     "ax = pairplot_cross_val(df, model=KNeighborsRegressor)\n",
     "ax;"
    ]
@@ -1231,9 +1251,10 @@
    ],
    "source": [
     "import random\n",
+    "\n",
     "ex = numpy.zeros((100, 2))\n",
     "for i in range(0, ex.shape[0]):\n",
-    "    h = random.randint(0, ex.shape[1]-1)\n",
+    "    h = random.randint(0, ex.shape[1] - 1)\n",
     "    ex[i, h] = 1\n",
     "ex[:5]"
    ]
@@ -1279,9 +1300,10 @@
    ],
    "source": [
     "import random\n",
+    "\n",
     "ex = numpy.zeros((100, 3))\n",
     "for i in range(0, ex.shape[0]):\n",
-    "    h = random.randint(0, ex.shape[1]-1)\n",
+    "    h = random.randint(0, ex.shape[1] - 1)\n",
     "    ex[i, h] = 1\n",
     "ex[:5]\n",
     "numpy.corrcoef(ex.T)"
@@ -1373,10 +1395,10 @@
    ],
    "source": [
     "c1 = [\"rouge\", \"bleu\", \"gris\"]\n",
-    "c2 = [\"rose\" ,\"orange\" ,\"cyan\" ,\"magenta\", \"blanc\", \"noir\"]\n",
+    "c2 = [\"rose\", \"orange\", \"cyan\", \"magenta\", \"blanc\", \"noir\"]\n",
     "ind = [random.randint(0, 2) for i in range(0, 100)]\n",
     "x1 = [c1[i] for i in ind]\n",
-    "x2 = [c2[i*2 + random.randint(0,1)] for i in ind]\n",
+    "x2 = [c2[i * 2 + random.randint(0, 1)] for i in ind]\n",
     "df = pandas.DataFrame(dict(X1=x1, X2=x2))\n",
     "df.head()"
    ]
@@ -1794,6 +1816,7 @@
    ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
     "enc = LabelEncoder()\n",
     "df[\"X1e\"] = enc.fit_transform(df[\"X1\"])\n",
     "df[\"X2e\"] = enc.fit_transform(df[\"X2\"])\n",
@@ -1962,7 +1985,7 @@
     }
    ],
    "source": [
-    "df[\"X1e\"] = df[\"X1e\"].apply(lambda i: (i+1)%3)\n",
+    "df[\"X1e\"] = df[\"X1e\"].apply(lambda i: (i + 1) % 3)\n",
     "df.head()"
    ]
   },
@@ -2166,7 +2189,7 @@
     }
    ],
    "source": [
-    "df[\"X1e\"] = df[\"X1e\"].apply(lambda i: (i+1)%3)\n",
+    "df[\"X1e\"] = df[\"X1e\"].apply(lambda i: (i + 1) % 3)\n",
     "correlation_cross_val(df[[\"X1e\", \"X2e\"]], DecisionTreeRegressor)"
    ]
   },
@@ -2341,6 +2364,7 @@
    ],
    "source": [
     "from sklearn.datasets import load_diabetes\n",
+    "\n",
     "df = load_diabetes()\n",
     "df = pandas.DataFrame(df.data, columns=df.feature_names)\n",
     "df.head()"
@@ -2808,7 +2832,7 @@
     }
    ],
    "source": [
-    "pairplot_cross_val(df[df.columns[:6]], model=DecisionTreeRegressor, figsize=(16,16));"
+    "pairplot_cross_val(df[df.columns[:6]], model=DecisionTreeRegressor, figsize=(16, 16));"
    ]
   },
   {
@@ -3060,80 +3084,89 @@
     "\n",
     "rs = np.random.RandomState(seed=0)\n",
     "\n",
-    "def mysubplot(x, y, numRows, numCols, plotNum,\n",
-    "              xlim=(-4, 4), ylim=(-4, 4)):\n",
     "\n",
+    "def mysubplot(x, y, numRows, numCols, plotNum, xlim=(-4, 4), ylim=(-4, 4)):\n",
     "    r = np.around(np.corrcoef(x, y)[0, 1], 1)\n",
-    "    \n",
+    "\n",
     "    # début ajout\n",
     "    df = pandas.DataFrame(dict(x=x, y=y))\n",
     "    cor = correlation_cross_val(df, DecisionTreeRegressor)\n",
-    "    dt = max(cor.iloc[1,0], cor.iloc[0,1])\n",
-    "    \n",
-    "    ax = plt.subplot(numRows, numCols, plotNum,\n",
-    "                     xlim=xlim, ylim=ylim)\n",
-    "    ax.set_title('Pearson r=%.1f\\nDT=%.1f' % (r, dt),fontsize=10)\n",
+    "    dt = max(cor.iloc[1, 0], cor.iloc[0, 1])\n",
+    "\n",
+    "    ax = plt.subplot(numRows, numCols, plotNum, xlim=xlim, ylim=ylim)\n",
+    "    ax.set_title(\"Pearson r=%.1f\\nDT=%.1f\" % (r, dt), fontsize=10)\n",
     "    ax.set_frame_on(False)\n",
     "    ax.axes.get_xaxis().set_visible(False)\n",
     "    ax.axes.get_yaxis().set_visible(False)\n",
-    "    ax.plot(x, y, ',')\n",
+    "    ax.plot(x, y, \",\")\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    return ax\n",
     "\n",
+    "\n",
     "def rotation(xy, t):\n",
     "    return np.dot(xy, [[np.cos(t), -np.sin(t)], [np.sin(t), np.cos(t)]])\n",
+    "\n",
     "\n",
     "def mvnormal(n=1000):\n",
     "    cors = [1.0, 0.8, 0.4, 0.0, -0.4, -0.8, -1.0]\n",
     "    for i, cor in enumerate(cors):\n",
-    "        cov = [[1, cor],[cor, 1]]\n",
+    "        cov = [[1, cor], [cor, 1]]\n",
     "        xy = rs.multivariate_normal([0, 0], cov, n)\n",
-    "        mysubplot(xy[:, 0], xy[:, 1], 3, 7, i+1)\n",
+    "        mysubplot(xy[:, 0], xy[:, 1], 3, 7, i + 1)\n",
+    "\n",
     "\n",
     "def rotnormal(n=1000):\n",
-    "    ts = [0, np.pi/12, np.pi/6, np.pi/4, np.pi/2-np.pi/6,\n",
-    "          np.pi/2-np.pi/12, np.pi/2]\n",
-    "    cov = [[1, 1],[1, 1]]\n",
+    "    ts = [\n",
+    "        0,\n",
+    "        np.pi / 12,\n",
+    "        np.pi / 6,\n",
+    "        np.pi / 4,\n",
+    "        np.pi / 2 - np.pi / 6,\n",
+    "        np.pi / 2 - np.pi / 12,\n",
+    "        np.pi / 2,\n",
+    "    ]\n",
+    "    cov = [[1, 1], [1, 1]]\n",
     "    xy = rs.multivariate_normal([0, 0], cov, n)\n",
     "    for i, t in enumerate(ts):\n",
     "        xy_r = rotation(xy, t)\n",
-    "        mysubplot(xy_r[:, 0], xy_r[:, 1], 3, 7, i+8)\n",
+    "        mysubplot(xy_r[:, 0], xy_r[:, 1], 3, 7, i + 8)\n",
+    "\n",
     "\n",
     "def others(n=1000):\n",
     "    x = rs.uniform(-1, 1, n)\n",
-    "    y = 4*(x**2-0.5)**2 + rs.uniform(-1, 1, n)/3\n",
-    "    mysubplot(x, y, 3, 7, 15, (-1, 1), (-1/3, 1+1/3))\n",
+    "    y = 4 * (x**2 - 0.5) ** 2 + rs.uniform(-1, 1, n) / 3\n",
+    "    mysubplot(x, y, 3, 7, 15, (-1, 1), (-1 / 3, 1 + 1 / 3))\n",
     "\n",
     "    y = rs.uniform(-1, 1, n)\n",
     "    xy = np.concatenate((x.reshape(-1, 1), y.reshape(-1, 1)), axis=1)\n",
-    "    xy = rotation(xy, -np.pi/8)\n",
-    "    lim = np.sqrt(2+np.sqrt(2)) / np.sqrt(2)\n",
+    "    xy = rotation(xy, -np.pi / 8)\n",
+    "    lim = np.sqrt(2 + np.sqrt(2)) / np.sqrt(2)\n",
     "    mysubplot(xy[:, 0], xy[:, 1], 3, 7, 16, (-lim, lim), (-lim, lim))\n",
     "\n",
-    "    xy = rotation(xy, -np.pi/8)\n",
+    "    xy = rotation(xy, -np.pi / 8)\n",
     "    lim = np.sqrt(2)\n",
     "    mysubplot(xy[:, 0], xy[:, 1], 3, 7, 17, (-lim, lim), (-lim, lim))\n",
     "\n",
-    "    y = 2*x**2 + rs.uniform(-1, 1, n)\n",
+    "    y = 2 * x**2 + rs.uniform(-1, 1, n)\n",
     "    mysubplot(x, y, 3, 7, 18, (-1, 1), (-1, 3))\n",
     "\n",
-    "    y = (x**2 + rs.uniform(0, 0.5, n)) * \\\n",
-    "        np.array([-1, 1])[rs.randint(0, 1, size=n)]\n",
+    "    y = (x**2 + rs.uniform(0, 0.5, n)) * np.array([-1, 1])[rs.randint(0, 1, size=n)]\n",
     "    mysubplot(x, y, 3, 7, 19, (-1.5, 1.5), (-1.5, 1.5))\n",
     "\n",
-    "    y = np.cos(x * np.pi) + rs.uniform(0, 1/8, n)\n",
-    "    x = np.sin(x * np.pi) + rs.uniform(0, 1/8, n)\n",
+    "    y = np.cos(x * np.pi) + rs.uniform(0, 1 / 8, n)\n",
+    "    x = np.sin(x * np.pi) + rs.uniform(0, 1 / 8, n)\n",
     "    mysubplot(x, y, 3, 7, 20, (-1.5, 1.5), (-1.5, 1.5))\n",
     "\n",
-    "    xy1 = np.random.multivariate_normal([3, 3], [[1, 0], [0, 1]], int(n/4))\n",
-    "    xy2 = np.random.multivariate_normal([-3, 3], [[1, 0], [0, 1]], int(n/4))\n",
-    "    xy3 = np.random.multivariate_normal([-3, -3], [[1, 0], [0, 1]], int(n/4))\n",
-    "    xy4 = np.random.multivariate_normal([3, -3], [[1, 0], [0, 1]], int(n/4))\n",
+    "    xy1 = np.random.multivariate_normal([3, 3], [[1, 0], [0, 1]], int(n / 4))\n",
+    "    xy2 = np.random.multivariate_normal([-3, 3], [[1, 0], [0, 1]], int(n / 4))\n",
+    "    xy3 = np.random.multivariate_normal([-3, -3], [[1, 0], [0, 1]], int(n / 4))\n",
+    "    xy4 = np.random.multivariate_normal([3, -3], [[1, 0], [0, 1]], int(n / 4))\n",
     "    xy = np.concatenate((xy1, xy2, xy3, xy4), axis=0)\n",
     "    mysubplot(xy[:, 0], xy[:, 1], 3, 7, 21, (-7, 7), (-7, 7))\n",
     "\n",
-    "plt.figure(figsize=(14,7))\n",
+    "\n",
+    "plt.figure(figsize=(14, 7))\n",
     "mvnormal(n=800)\n",
     "rotnormal(n=200)\n",
     "others(n=800)\n",
