--- a/_doc/notebooks/ml/neural_tree_cost.ipynb
+++ b/_doc/notebooks/ml/neural_tree_cost.ipynb
@@ -959,7 +959,7 @@
    ],
    "source": [
     "from tqdm import tqdm\n",
-    "from cpyquickhelper.numbers import measure_time\n",
+    "from onnx_array_api.ext_test_case import measure_time\n",
     "\n",
     "data = []\n",
     "for d in tqdm(range(2, 10)):\n",
