fix many warnings

--- a/_doc/notebooks/ml/neural_tree_cost.ipynb
+++ b/_doc/notebooks/ml/neural_tree_cost.ipynb
@@ -5,9 +5,9 @@
       "id": "59a065e8",
       "metadata": {},
       "source": [
-        "# NeuralTreeNet et co\u00fbt\n",
+        "# NeuralTreeNet et coût\n",
         "\n",
-        "La classe [NeuralTreeNet](:ref:`cl-NeuralTreeNet`) convertit un arbre de d\u00e9cision en r\u00e9seau de neurones. Si la conversion n'est pas exacte mais elle permet d'obtenir un mod\u00e8le diff\u00e9rentiable et apprenable avec un algorithme d'optimisation \u00e0 base de gradient. Ce notebook compare le temps d'\u00e9x\u00e9cution entre un arbre et le r\u00e9seau de neurones."
+        "La classe *NeuralTreeNet* convertit un arbre de décision en réseau de neurones. Si la conversion n'est pas exacte mais elle permet d'obtenir un modèle différentiable et apprenable avec un algorithme d'optimisation à base de gradient. Ce notebook compare le temps d'éxécution entre un arbre et le réseau de neurones."
       ]
     },
     {
@@ -64,7 +64,7 @@
               "            // when converted in RST\n",
               "            href = anchors[i].id;\n",
               "            text_memo += \"#1-\" + href;\n",
-              "            // passer \u00e0 child suivant (le chercher)\n",
+              "            // passer à child suivant (le chercher)\n",
               "        }\n",
               "        else if (child.hasAttribute(\"id\")) {\n",
               "            // in a notebook\n",
@@ -83,7 +83,7 @@
               "        if ((level < lfirst) || (level > llast)) {\n",
               "            continue ;\n",
               "        }\n",
-              "        if (title.endsWith('\u00b6')) {\n",
+              "        if (title.endsWith('¶')) {\n",
               "            title = title.substring(0,title.length-1).replace(\"<\", \"&lt;\")\n",
               "         .replace(\">\", \"&gt;\").replace(\"&\", \"&amp;\");\n",
               "        }\n",
@@ -180,9 +180,9 @@
       "id": "52d5e7f8",
       "metadata": {},
       "source": [
-        "## Jeux de donn\u00e9es\n",
+        "## Jeux de données\n",
         "\n",
-        "On construit un jeu de donn\u00e9es al\u00e9atoire."
+        "On construit un jeu de données aléatoire."
       ]
     },
     {
@@ -217,7 +217,7 @@
       "id": "12c4a84c",
       "metadata": {},
       "source": [
-        "## Caler un arbre de d\u00e9cision"
+        "## Caler un arbre de décision"
       ]
     },
     {
@@ -273,7 +273,7 @@
       "id": "36db83ef",
       "metadata": {},
       "source": [
-        "Covnersion de l'arbre en r\u00e9seau de neurones"
+        "Covnersion de l'arbre en réseau de neurones"
       ]
     },
     {
@@ -349,7 +349,7 @@
       "id": "559f0a25",
       "metadata": {},
       "source": [
-        "La conversion est loin d'\u00eatre parfaite. La raison vient du fait que les fonctions de seuil sont approch\u00e9es par des fonctions sigmo\u00efdes. Il suffit d'une erreur minime pour que la d\u00e9cision prenne un chemin diff\u00e9rent dans l'arbre et soit compl\u00e8tement diff\u00e9rente."
+        "La conversion est loin d'être parfaite. La raison vient du fait que les fonctions de seuil sont approchées par des fonctions sigmoïdes. Il suffit d'une erreur minime pour que la décision prenne un chemin différent dans l'arbre et soit complètement différente."
       ]
     },
     {
@@ -378,7 +378,7 @@
       "id": "f59994a5",
       "metadata": {},
       "source": [
-        "Le r\u00e9seau de neurones peut \u00eatre repr\u00e9sent\u00e9 comme suit."
+        "Le réseau de neurones peut être représenté comme suit."
       ]
     },
     {
@@ -456,7 +456,7 @@
       "id": "857f2e42",
       "metadata": {},
       "source": [
-        "## Temps de calcul des pr\u00e9dictions"
+        "## Temps de calcul des prédictions"
       ]
     },
     {
@@ -470,7 +470,7 @@
           "output_type": "stream",
           "text": [
             "No CUDA runtime is found, using CUDA_HOME='C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.5'\n",
-            "518 \u00b5s \u00b1 41.4 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 1,000 loops each)\n"
+            "518 µs ± 41.4 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
           ]
         }
       ],
@@ -493,7 +493,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "124 \u00b5s \u00b1 5.21 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 10,000 loops each)\n"
+            "124 µs ± 5.21 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
           ]
         }
       ],
@@ -511,7 +511,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "3.18 ms \u00b1 569 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 100 loops each)\n"
+            "3.18 ms ± 569 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
           ]
         }
       ],
@@ -524,7 +524,7 @@
       "id": "5d8ecaa5",
       "metadata": {},
       "source": [
-        "Le temps de calcul est nettement plus long pour le r\u00e9seau de neurones. Si l'arbre de d\u00e9cision a une profondeur de *d*, l'arbre de d\u00e9cision va faire exactement *d* comparaisons. Le r\u00e9seau de neurones quant \u00e0 lui \u00e9value tous les seuils pour chaque pr\u00e9diction, soit $2^d$. V\u00e9rifions cela en faisant variable la profondeur."
+        "Le temps de calcul est nettement plus long pour le réseau de neurones. Si l'arbre de décision a une profondeur de *d*, l'arbre de décision va faire exactement *d* comparaisons. Le réseau de neurones quant à lui évalue tous les seuils pour chaque prédiction, soit $2^d$. Vérifions cela en faisant variable la profondeur."
       ]
     },
     {
@@ -545,7 +545,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 8/8 [00:07<00:00,  1.04it/s]\n"
+            "100%|██████████| 8/8 [00:07<00:00,  1.04it/s]\n"
           ]
         },
         {
@@ -1017,7 +1017,7 @@
       "id": "b30bbefe",
       "metadata": {},
       "source": [
-        "L'hypoth\u00e8se est v\u00e9rifi\u00e9e."
+        "L'hypothèse est vérifiée."
       ]
     },
     {
